Agrega creación y edición de productos desde el panel de administrador, incluyendo implementación componente para el manejo de imágenes y mejoras de ImageService y ProductoService